test/conformance/chainsaw/validating-policies/context/globalreference-missing-graceful-edge-cases/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-globalcontext-edge-cases
